--- a/front-end/src/index-final.css
+++ b/front-end/src/index-final.css
@@ -16,9 +16,6 @@
   --transition-duration: 200ms;
   --transition-function: ease;
 
-  --animation-duration: 500ms;
-  --animation-function: ease;
-
   --border-radius-s: 5px;
   --border-radius-m: 10px;
   --border-radius-l: 15px;
@@ -65,20 +62,12 @@ img {
   justify-content: space-between;
   align-items: center;
   padding: 8px 20px;
-  background-color: var(--green-1000);
-  border-bottom: 2px solid var(--green-400);
-  box-shadow: 0 0 10px var(--green-400), 0 0 20px var(--green-400);
-  transition: box-shadow var(--transition-function) var(--transition-duration);
-}
-
-.header:hover {
-  box-shadow: 0 0 20px var(--green-400), 0 0 30px var(--green-400);
 }
 
 /* Main */
 
 .main {
-  margin: 20px 10px 10px;
+  margin: 0 10px 10px;
   padding: 20px;
   border-radius: var(--border-radius-l);
   flex: 1;
@@ -90,9 +79,6 @@ img {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  opacity: 0;
-  animation: FadeIn var(--transition-duration) var(--transition-function)
-    forwards;
 }
 
 @media (max-width: 480px) {
@@ -179,16 +165,6 @@ img {
   border-radius: 50%;
 }
 
-.single-item__div-image--artist {
-  width: 140px;
-  height: 140px;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10%;
-}
-
 .single-item__icon {
   position: absolute;
   font-size: 50px;
@@ -208,16 +184,6 @@ img {
   transform: translateY(0);
   right: 25px;
   bottom: 25px;
-  animation: rotate 5s linear infinite;
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .single-item__title {
@@ -262,11 +228,8 @@ img {
 
 .artist {
   border-radius: var(--border-radius-l);
-  margin: 20px 10px;
+  margin: 0 10px 10px;
   overflow: hidden;
-  transform: translateX(105%);
-  animation: FadeIn var(--transition-duration) var(--transition-function)
-    forwards;
 }
 
 .artist__header {
@@ -280,12 +243,6 @@ img {
   background-position-y: 20%;
   background-image: linear-gradient(to bottom, var(--_shade), var(--_shade)),
     url(https://i.scdn.co/image/ab67618600001016909a162796dbc3629a1fadeb);
-  transition: background-position-y var(--transition-function)
-    var(--transition-duration);
-}
-
-.artist__header:hover {
-  background-position-y: 30%;
 }
 
 .artist__title {
@@ -333,19 +290,6 @@ img {
   margin-left: 25px;
   margin-top: 20px;
   cursor: pointer;
-  animation: pulse 2s ease infinite;
-}
-
-@keyframes pulse {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(1%);
-  }
-  100% {
-    transform: translateX(0);
-  }
 }
 
 .song-list__see-more:hover {
@@ -370,28 +314,14 @@ img {
   text-decoration: none;
 }
 
-.song-item__name {
-  font-weight: 600;
-  transition-property: transform;
-  transition-duration: var(--transition-duration);
-  transition-timing-function: var(--transition-function);
-}
-
-.song-item:hover .song-item__name {
-  transform: translateX(1rem);
+.song-item__name:hover {
+  text-decoration: underline;
 }
 
 .song-item__image {
   width: 40px;
   height: 40px;
   border-radius: var(--border-radius-s);
-  transition-property: transform;
-  transition-timing-function: var(--transition-function);
-  transition-duration: var(--transition-duration);
-}
-
-.song-item:hover .song-item__image {
-  transform: scale(120%);
 }
 
 .song-item__album {
@@ -418,13 +348,10 @@ img {
   display: grid;
   grid-template-rows: 1fr auto;
   flex: 1;
-  transform: translateX(105%);
-  animation: FadeIn var(--transition-duration) var(--transition-function)
-    forwards;
 }
 
 .song__container {
-  margin: 20px 10px 0;
+  margin: 0 20px;
   border-top-right-radius: 15px;
   background-image: linear-gradient(
     to bottom,
@@ -450,7 +377,6 @@ img {
   color: white;
   padding: 16px 25px;
   gap: 15px;
-  margin-bottom: 0;
 }
 
 .song__artist-image {
@@ -464,7 +390,7 @@ img {
   font-weight: 700;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1280px) {
   .song__name {
     font-size: 16px;
   }
@@ -572,13 +498,5 @@ img {
   .player {
     grid-row: 2;
     grid-column: 1 / span 2;
-  }
-}
-
-@keyframes FadeIn {
-  to {
-    transform: translateX(0);
-    opacity: 1;
-    margin-bottom: 10px;
   }
 }
